// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 1: Einzelperson ledig ZH, 100k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 612400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 649400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 686700,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 724200,
    "steuern": 14600,
  },
  {
    "ahv": 15100,
    "ausgaben": 61000,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 266300,
    "steuern": 9300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 273800,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 281300,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 288700,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 296200,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 303700,
    "steuern": 7300,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 2: Paar verheiratet ZH, 100k+80k, beide 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 110200,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 969800,
    "steuern": 26500,
  },
  {
    "ahv": 0,
    "ausgaben": 110300,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1088600,
    "steuern": 26600,
  },
  {
    "ahv": 0,
    "ausgaben": 110400,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1207900,
    "steuern": 26700,
  },
  {
    "ahv": 0,
    "ausgaben": 110400,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1327800,
    "steuern": 26700,
  },
  {
    "ahv": 29400,
    "ausgaben": 71400,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 549200,
    "steuern": 16700,
  },
  {
    "ahv": 49100,
    "ausgaben": 61200,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2031,
    "netto": 591100,
    "steuern": 13200,
  },
  {
    "ahv": 49100,
    "ausgaben": 61300,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2032,
    "netto": 632900,
    "steuern": 13300,
  },
  {
    "ahv": 49100,
    "ausgaben": 61400,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2033,
    "netto": 674700,
    "steuern": 13400,
  },
  {
    "ahv": 49100,
    "ausgaben": 61500,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2034,
    "netto": 716300,
    "steuern": 13500,
  },
  {
    "ahv": 49100,
    "ausgaben": 61600,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2035,
    "netto": 757900,
    "steuern": 13600,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 3: Paar Konkubinat ZH (sollte ≠ Verheiratet) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 107800,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 972200,
    "steuern": 24100,
  },
  {
    "ahv": 0,
    "ausgaben": 107800,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1093500,
    "steuern": 24100,
  },
  {
    "ahv": 0,
    "ausgaben": 107900,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1215200,
    "steuern": 24200,
  },
  {
    "ahv": 0,
    "ausgaben": 108000,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1337500,
    "steuern": 24300,
  },
  {
    "ahv": 29400,
    "ausgaben": 70600,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 559700,
    "steuern": 16000,
  },
  {
    "ahv": 63700,
    "ausgaben": 61100,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2031,
    "netto": 616300,
    "steuern": 13100,
  },
  {
    "ahv": 63700,
    "ausgaben": 61100,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2032,
    "netto": 672800,
    "steuern": 13100,
  },
  {
    "ahv": 63700,
    "ausgaben": 61200,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2033,
    "netto": 729300,
    "steuern": 13200,
  },
  {
    "ahv": 63700,
    "ausgaben": 61400,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2034,
    "netto": 785600,
    "steuern": 13400,
  },
  {
    "ahv": 63700,
    "ausgaben": 61500,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2035,
    "netto": 841800,
    "steuern": 13500,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 4: Einzelperson hoch ZG, 200k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 110000,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2026,
    "netto": 690000,
    "steuern": 30000,
  },
  {
    "ahv": 0,
    "ausgaben": 110100,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2027,
    "netto": 804400,
    "steuern": 30000,
  },
  {
    "ahv": 0,
    "ausgaben": 110200,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2028,
    "netto": 919100,
    "steuern": 30100,
  },
  {
    "ahv": 0,
    "ausgaben": 110300,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2029,
    "netto": 1033900,
    "steuern": 30200,
  },
  {
    "ahv": 15100,
    "ausgaben": 70300,
    "bvg": 12500,
    "einkommen": 127600,
    "jahr": 2030,
    "netto": 616700,
    "steuern": 14900,
  },
  {
    "ahv": 32800,
    "ausgaben": 52900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 626600,
    "steuern": 4900,
  },
  {
    "ahv": 32800,
    "ausgaben": 52900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 636400,
    "steuern": 4900,
  },
  {
    "ahv": 32800,
    "ausgaben": 52900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 646300,
    "steuern": 4900,
  },
  {
    "ahv": 32800,
    "ausgaben": 52900,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 656100,
    "steuern": 4900,
  },
  {
    "ahv": 32800,
    "ausgaben": 53000,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 665900,
    "steuern": 5000,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 5: Reform 2030 — Eigenheim ZH (vor/nach 2030) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 99500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 1549900,
    "steuern": 17500,
  },
  {
    "ahv": 0,
    "ausgaben": 99500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 1575600,
    "steuern": 17500,
  },
  {
    "ahv": 15100,
    "ausgaben": 70800,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 1107900,
    "steuern": 10100,
  },
  {
    "ahv": 32800,
    "ausgaben": 65000,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 1105600,
    "steuern": 8000,
  },
  {
    "ahv": 32800,
    "ausgaben": 65000,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 1103300,
    "steuern": 8000,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 6: Vorbezug AHV 63 — Einzelperson 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 612400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 87600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 674600,
    "steuern": 14600,
  },
  {
    "ahv": 13100,
    "ausgaben": 76700,
    "bvg": 11300,
    "einkommen": 124300,
    "jahr": 2028,
    "netto": 272400,
    "steuern": 21300,
  },
  {
    "ahv": 28300,
    "ausgaben": 86500,
    "bvg": 27000,
    "einkommen": 155300,
    "jahr": 2029,
    "netto": 341300,
    "steuern": 31100,
  },
  {
    "ahv": 28300,
    "ausgaben": 68100,
    "bvg": 27000,
    "einkommen": 105300,
    "jahr": 2030,
    "netto": 378500,
    "steuern": 16400,
  },
  {
    "ahv": 28300,
    "ausgaben": 54000,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2031,
    "netto": 379700,
    "steuern": 6000,
  },
  {
    "ahv": 28300,
    "ausgaben": 54000,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2032,
    "netto": 381000,
    "steuern": 6000,
  },
]
`;
